--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </button>
 
                             <!-- LOGO -->
-                            <a class="navbar-brand" href="#" style="color: #FFB305;">BLESSING A.</a>
+                            <a class="navbar-brand branding" href="#"><img src="/assets/images/BlessingAlabi.png"></img></a>
 
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -461,7 +461,7 @@
         <!--Start Footer-->
         <footer class="padding-top-90 padding-bottom-90">
             <div class="container text-center animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                <h3>Soliman</h3>
+                <h3>LOGO</h3>
 
                 <div class="social-links">
                     <!--Social links-->
@@ -478,7 +478,7 @@
                         <i class="fa fa-dribbble"></i>
                     </a>
                 </div>
-                <p>&copy; 2018 Soliman | All rights reserved.</p>
+                <p>&copy; 2023 BlessingAlabi | All rights reserved.</p>
             </div><!--.container-->  
         </footer>
         <!--End Footer-->
