--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <div class="box animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
                             <div class="card card-border">
                                 <img src="assets/images/kamal-sadiq-adam-jp1JuSepr94-unsplash.jpg" class="card-img-top" alt="...">
-                                <div class="card-body card-style" style="background-color: #dfdbdb">
+                                <div class="card-body card-style item animated animated_scroll fadeInUp" style="animation-delay: 0.3s" >
                                     <h3 class="card-title">FrontDesk Management System </h3>
                                   <p class="card-text">eu ea fugiat Excepteur officia elit aliquip proident amet nisi aute proident </p>
                                   <a href="#" class="btn btn-primary">Go somewhere</a>
