--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="display-table">
                     <div class="display-table-cell home_bt">
                         <div>
-                            <h1>Firstname Surname </h1>
+                            <h1>Blessing Alabi </h1>
                             <h3>
                                 <span>designer, developer & Writer</span>
                             </h3>
@@ -174,8 +174,7 @@
                         <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 30px;">Hi There! I am <span class="about-sub">Firstname Lastname</span></h3>
                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I'm 24 years old creative web designer based in New York, specializing in User Interface Design and Development. I build clean, appealing, and functional interfaces which comply with the latest web standards.</p>
                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <div class="skills">
-                            <div class="container">
+                        <div class="skills" style="margin-left: 15px;">
                                 <div class="row dev-skill">
                                     <span class="border-btn">React.js</span>
                                     <span class="border-btn">Next.js</span>
@@ -201,8 +200,6 @@
                                     <span class="border-btn">Technical writing</span>
                                 </div>
                             </div>
-                           
-                        </div>
                     </div><!--.skills-->
                             
                         <!-- <div class="about_btns animated animated_scroll fadeInUp" style="animation-delay: 0.3s; margin-top: 10px;">
