--- a/index.html
+++ b/index.html
@@ -112,41 +112,36 @@
                         <div>
                             <h1>Blessing Alabi </h1>
                             <h3>
-                                <span>designer, developer & Writer</span>
+                                <span>Web developer, Blockchain Developer & Technical Writer</span>
                             </h3>
-                            <span>
+                            <div class="width-container">
                                 <h3>
-                                    id consequat adipiscing aliqua amet proident occaecat esse occaecat  quis adipiscing <br/> labore consectetur proident occaecat esse occaecat  quis adipiscing 
+                                    i help bring ideas to life on the web and secure them with blockchain technology. I also write clear and engaging explanations to make complex technical concepts accessible for everyone.
                                 </h3>
-                            </span>
+                            </div>
                             <div class="about_btns text-center">
                                 <a href="#">Download CV</a>
                                 <a class="smooth_scroll">Contact Me</a>
                             </div>
                             <ul class="text-center list-unstyled social" style="margin-top: 20px;">
                                 <li>
-                                    <a href="#">
-                                        <i class="fa fa-facebook fa-2x"></i>
+                                    <a href="https://github.com/SeunScape">
+                                        <i class="fa-brands fa-github"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://twitter.com/blerix_">
                                         <i class="fa fa-twitter fa-2x"></i>
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-google-plus fa-2x"></i>
+                                <!-- <li>
+                                    <a href="blessin">
+                                        <i class="fa-brands fa-google"></i>
                                     </a>
-                                </li>
+                                </li> -->
                                 <li>
-                                    <a href="#">
-                                        <i class="fa fa-dribbble fa-2x"></i>                            
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-instagram fa-2x"></i>
+                                    <a href="https://www.linkedin.com/in/blessing-alabi-9090041b1/">
+                                        <i class="fa-brands fa-linkedin-in"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -171,21 +166,29 @@
                         </div>
                     </div>
                     <div class="col-md-7 padding-left-35">
-                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 30px;">Hi There! I am <span class="about-sub">Firstname Lastname</span></h3>
-                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I'm 24 years old creative web designer based in New York, specializing in User Interface Design and Development. I build clean, appealing, and functional interfaces which comply with the latest web standards.</p>
-                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 30px;">Hi there, <span class="about-sub">nice to meet you</span></h3>
+                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I developed an interest in computing at an early age and started coding in my first year of studying computer science in the university. As a student, I have honed my skills in building dynamic and static websites using cutting-edge technologies such as ReactJS and NextJS. My love for blockchain technology has led me to explore the world of smart contract development, and I am always eager to learn more about this exciting field.</p>
+                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">When I'm not coding or exploring the blockchain, I enjoy staying active through working out and learning new languages, such as Spanish. I also have a passion for writing and love to relax by watching movies.</p>
                         <div class="skills">
                             <ul class="dev-skill">
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
-                                <li>NextJS</li>
+                                <li>React.js</li>
+                                <li>Next.js</li>
+                                <li>Solidity</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>TypeScript</li>
+                                <li>Figma</li>
+                                <li>Truffle</li>
+                                <li>HardHat</li>
+                                <li>Web3.js</li>
+                                <li>Wordpress</li>
+                                <li>Graphics</li>
+                                <li>GIT</li>
+                                <li>Technical Writing</li>
+                                <li>Blockchain writing</li>
+                                <li>Crypto writing</li>
+                                <li>Whitepaper</li>
                             </ul>
                     </div><!--.skills-->
                             
@@ -290,24 +293,19 @@
                             <div class="row">
                                 <div class="col-md-7 padding-left-35 contain">
                                     <h6>Front-End Development</h6>
-                                    <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 40px;">React Dashboard</span></h3>
+                                    <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">FrontDesk MS</span></h3>
                                     <div class="skills">
                                         <ul class="dev-skill">
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
-                                            <li>NextJS</li>
+                                            <li>React.js</li>
+                                            <li>HTML</li>
+                                            <li>CSS</li>
+                                            <li>JavaScript</li>
+                                            <li>PHP</li>
                                         </ul>
                                        
                                     </div>
-                                    <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I'm 24 years old creative web designer based in New York, specializing in User Interface Design and Development. I build clean, appealing, and functional interfaces which comply with the latest web standards.</p>
-                                    <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I was the frontend developer on the FrontDesk Management System project. I used React.js to create a user-friendly dashboard for tracking office information, which was received and displayed from the backend through an API. The backend was programmed using PHP, and the system also had a fully functioning authentication system with log-in and log-out functionality.</p>
+                                    <!-- <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
                                     <div class="portfolio_btn">
                                         <a class="smooth_scroll">View project</a>
                                     </div>
