--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">When I'm not coding or exploring the blockchain, I enjoy staying active through working out and learning new languages, such as Spanish. I also have a passion for writing and love to relax by watching movies.</p>
                         <div class="skills">
                             <ul class="dev-skill">
-                                <li>React.js</li>
+                                <li>ReactJS</li>
                                 <li>Next.js</li>
                                 <li>Solidity</li>
                                 <li>HTML</li>
@@ -304,7 +304,7 @@
                                         </ul>
                                        
                                     </div>
-                                    <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I was the frontend developer on the FrontDesk Management System project. I used React.js to create a user-friendly dashboard for tracking office information, which was received and displayed from the backend through an API. The backend was programmed using PHP, and the system also had a fully functioning authentication system with log-in and log-out functionality.</p>
+                                    <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I was the frontend developer on the FrontDesk Management System project. I used React.js to create a user-friendly dashboard for tracking office information, which was received and displayed from the backend through an API. The backend was programmed using PHP, and the system also had a fully functioning authentication system with log-in, recover password and log-out functionality.</p>
                                     <!-- <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
                                     <div class="portfolio_btn">
                                         <a class="smooth_scroll">View project</a>
@@ -321,23 +321,44 @@
                             <div class="row padding-top-90">
                                 <div class="row">
                                     <div class="col-md-7 padding-left-35 contain">
-                                        <h6>Front-End Development</h6>
-                                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 40px;">React Dashboard</span></h3>
+                                        <h6 style="color:#507ec8">Blockchain Development</h6>
+                                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Chrnonicles NFT</span></h3>
                                         <div class="skills">
                                             <ul class="dev-skill">
+                                                <li>Solidity</li>
                                                 <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
-                                                <li>NextJS</li>
+                                                <li>React.jS</li>
+                                                <li>Web3.js</li>
+                                                <li>HardHat</li> 
                                             </ul>
                                         </div>
-                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">I'm 24 years old creative web designer based in New York, specializing in User Interface Design and Development. I build clean, appealing, and functional interfaces which comply with the latest web standards.</p>
+                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
+                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                        <div class="portfolio_btn">
+                                            <a class="smooth_scroll">View project</a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5">
+                                        <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
+                                            <img src="assets/images/me.jpg" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                             <!-- project 3 -->
+                             <div class="row padding-top-90">
+                                <div class="row">
+                                    <div class="col-md-7 padding-left-35 contain">
+                                        <h6 style="color:#d35ca5">Writing</h6>
+                                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Whitepaper</span></h3>
+                                        <div class="skills">
+                                            <ul class="dev-skill">
+                                                <li>Blockchain</li>
+                                                <li>Technical writing</li>
+                                                <li>Tokenomics</li>
+                                            </ul>
+                                        </div>
+                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                         <div class="portfolio_btn">
                                             <a class="smooth_scroll">View project</a>
