--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                             <ul class="dev-skill">
                                                 <li>Solidity</li>
                                                 <li>NextJS</li>
-                                                <li>React.jS</li>
+                                                <li>React.js</li>
                                                 <li>Web3.js</li>
                                                 <li>HardHat</li> 
                                             </ul>
