--- a/template.html
+++ b/template.html
@@ -40,7 +40,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
-        <script src="./assets/js/anime.js"></script>
+        <!-- <script src="./assets/js/anime.js"></script> -->
 
         <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
@@ -51,7 +51,7 @@
           <script src="anime.min.js"></script>
         <![endif]-->
         <style>
-.path {
+/* .path {
   stroke-dasharray: 100;
   animation: dash 5s linear;
 }
@@ -60,10 +60,10 @@
   to {
     stroke-dashoffset: 1000;
   }
-}
+} */
         </style>
 
-        <script>
+        <!-- <script>
 anime({
   targets: '.line-drawing-demo .lines path',
   strokeDashoffset: [anime.setDashoffset, 0],
@@ -73,7 +73,7 @@ anime({
   direction: 'alternate',
   loop: true
 });
-        </script>
+        </script> -->
             <style>
               .navbar-default .navbar-brand:hover, 
 .navbar-default .navbar-brand:focus {
