--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                             </div><!--.row-->
                                 
                             <div class="contact_form animated animated_scroll fadeInUp" style="animation-delay: 0.4s"> 
-                                <form action="https://formsubmit.co/el/rabuze" method="post">
+                                <form action="https://formspree.io/f/mdoveqzy" method="POST">
                                     <input placeholder="Name" name="name" type="text" class="form-control">
                                     <input placeholder="E-mail" name="email" type="email" class="form-control">
                                     <textarea placeholder="Message" name="message" class="form-control"></textarea>
@@ -444,17 +444,14 @@
 
                 <div class="social-links">
                     <!--Social links-->
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="https://twitter.com/" target="_blank">
+                    <a href="https://twitter.com/blerix_" target="_blank">
                         <i class="fa fa-twitter"></i>
                     </a>
-                    <a href="https://plus.google.com/" target="_blank">
-                        <i class="fa fa-google"></i>
+                    <a href="https://www.linkedin.com/in/blessing-alabi-9090041b1/">
+                        <i class="fa-brands fa-linkedin-in"></i>
                     </a>
-                    <a href="https://www.dribbble.com" target="_blank">
-                        <i class="fa fa-dribbble"></i>
+                    <a href="https://github.com/SeunScape">
+                        <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
                 <p>&copy; 2023 BlessingAlabi | All rights rehed.</p>
