--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                 <div class="row">
                                     <div class="col-md-7 padding-left-35 contain">
                                         <h6 style="color:#d35ca5">Writing</h6>
-                                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Whitepaper</span></h3>
+                                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Whitepapers</span></h3>
                                         <div class="skills">
                                             <ul class="dev-skill">
                                                 <li>Blockchain</li>
@@ -359,14 +359,14 @@
                                             </ul>
                                         </div>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
-                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"> I have a deep understanding of blockchain technology, DeFi, and the cryptocurrency market, and I use my expertise to create high-quality whitepapers and litepapers, along with visually appealing infographics and graphics that complement my written work.</p>
                                         <div class="portfolio_btn">
-                                            <a class="smooth_scroll">View project</a>
+                                            <a href="/whitepapers.html" target="_blank">View project</a>
                                         </div>
                                     </div>
                                     <div class="col-md-5">
                                         <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
-                                            <img src="assets/images/me.jpg" alt="">
+                                            <img src="./assets/images/Screenshot_20230217_115040.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -379,7 +379,7 @@
         <section class="contact padding-top-90 padding-bottom-90 primary_bg" id="contact">
                 <div class="container">
                     <div class="sec_title">
-                        <h2>Contact</h2>
+                        <h2>Contact Me</h2>
                     </div>
 
                     <div class="row">
@@ -391,7 +391,7 @@
                                         <span class="fa fa-phone"></span>
                                         <div>
                                             <h4>Call Me</h4>
-                                            <p>+123 456 789</p>
+                                            <p>+234 7040105190, +234 7032045983</p>
                                         </div>
                                     </div>
                                 </div>
@@ -405,16 +405,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-                                <!-- <div class="col-sm-4">
-                                    <div class="content">
-                                        <span class="fa fa-map-marker"></span>
-                                        <div>
-                                            <h4>Find Me</h4>
-                                            <p>New York, NY</p>
-                                        </div>
-                                    </div>
-                                </div> -->
 
                             </div><!--.row-->
                                 
@@ -454,7 +444,7 @@
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
-                <p>&copy; 2023 BlessingAlabi | All rights rehed.</p>
+                <p>&copy; 2023 BlessingAlabi | All rights reserved.</p>
             </div><!--.container-->  
         </footer>
         <!--End Footer-->
