--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
                                             </ul>
                                         </div>
                                         <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"></p>
-                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"> I have a deep understanding of blockchain technology, DeFi, and the cryptocurrency market, and I use my expertise to create high-quality whitepapers and litepapers, along with visually appealing infographics and graphics that complement my written work.</p>
+                                        <p class="animated animated_scroll fadeInUp" style="animation-delay: 0.3s"> I have a deep understanding of blockchain technology, DeFi, and the cryptocurrency market, and I use my expertise to create high-quality whitepapers and litepapers, along with visually appealing infographics and graphics that complement my written work. <br/> Additionally, I have experience in tokenomics and can provide insights into the design and implementation of effective token models for projects.</p>
                                         <div class="portfolio_btn">
-                                            <a href="/whitepapers.html" target="_blank">View project</a>
+                                            <a href="/whitepapers.html" target="_blank">View projects</a>
                                         </div>
                                     </div>
                                     <div class="col-md-5">
