--- a/whitepapers.html
+++ b/whitepapers.html
@@ -167,7 +167,9 @@
                     <div class="row padding-top-90">
                         <div class="col-md-7 padding-left-35 contain">
                             <h2>The Afrosphere </h2>
-                            <p>commodo exercitation exercitation voluptate voluptate esse cillum culpa reprehenderit minim labore veniam exercitation officia voluptate aliquip ad aliqua consectetur. ad commodo dolor adipiscing quis sed deserunt nisi ullamco dolor proident eu sit qui quis amet eiusmod tempor. aute veniam officia id nulla velit aliquip culpa nostrud sunt fugiat elit qui anim non irure non quis. cillum Duis dolor ut elit aliquip eu nostrud laborum nisi ut velit sit deserunt lorem voluptate non. magna qui laborum cupidatat minim do cupidatat commodo officia aliquip ea sit consectetur elit sunt laborum lorem. et pariatur Duis commodo pariatur sunt ut magna qui elit mollit sint fugiat lorem laboris occaecat.</p>
+                            <p>The AfroSphere is a visionary project that seeks to create an all-inclusive ecosystem built on blockchain technology, with the aim of unifying the African community, and promoting economic development and physical growth of nations represented by Africans. <br/>My role in this project was to contribute to the development of its whitepaper, outlining the goals and objectives of the project in a clear and concise manner.
+
+                                Through my work, I helped to explain the potential of blockchain technology and cryptocurrency to create a sustainable and financially inclusive community, erasing the economic marginalization faced by many Africans.</p>
                         </div>
                         <div class="col-md-5">
                             <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
@@ -178,8 +180,10 @@
                     </div>
                     <div class="row padding-top-90">
                         <div class="col-md-7 padding-right-35 contain">
-                            <h2> DPET-Whitepaper </h2>
-                            <p>commodo exercitation exercitation voluptate voluptate esse cillum culpa reprehenderit minim labore veniam exercitation officia voluptate aliquip ad aliqua consectetur. ad commodo dolor adipiscing quis sed deserunt nisi ullamco dolor proident eu sit qui quis amet eiusmod tempor. aute veniam officia id nulla velit aliquip culpa nostrud sunt fugiat elit qui anim non irure non quis. cillum Duis dolor ut elit aliquip eu nostrud laborum nisi ut velit sit deserunt lorem voluptate non. magna qui laborum cupidatat minim do cupidatat commodo officia aliquip ea sit consectetur elit sunt laborum lorem. et pariatur Duis commodo pariatur sunt ut magna qui elit mollit sint fugiat lorem laboris occaecat.</p>
+                            <h2> My DeFi Pet Whitepaper </h2>
+                            <p>As a whitepaper writer for "My DeFi Pet", my goal was to effectively communicate the vision and mission of this innovative blockchain game to potential players and investors. "My DeFi Pet" is a unique pet-raising game that combines the cutting-edge features of DeFi functionality with personalized gameplay, with the ultimate goal of mass adoption.
+
+                             <br/>   Through the whitepaper, I aimed to provide a clear and concise explanation of how the game works, highlighting its key features and how they work together to create a revolutionary gaming experience. I also discussed how the game incorporates DeFi functionality, enabling players to earn and trade in-game assets while maintaining full ownership and control.</p>
                         </div>
                         <div class="col-md-5">
                             <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
@@ -190,7 +194,9 @@
                     <div class="row padding-top-90">
                         <div class="col-md-7 padding-left-35 contain">
                             <h2> Wattybit Whitepaper </h2>
-                            <p>commodo exercitation exercitation voluptate voluptate esse cillum culpa reprehenderit minim labore veniam exercitation officia voluptate aliquip ad aliqua consectetur. ad commodo dolor adipiscing quis sed deserunt nisi ullamco dolor proident eu sit qui quis amet eiusmod tempor. aute veniam officia id nulla velit aliquip culpa nostrud sunt fugiat elit qui anim non irure non quis. cillum Duis dolor ut elit aliquip eu nostrud laborum nisi ut velit sit deserunt lorem voluptate non. magna qui laborum cupidatat minim do cupidatat commodo officia aliquip ea sit consectetur elit sunt laborum lorem. et pariatur Duis commodo pariatur sunt ut magna qui elit mollit sint fugiat lorem laboris occaecat.</p>
+                            <p>WattyBit is a project that centers on the creation of a utility token called WATTY, which is designed to tokenize the Energy Cost Layer (ECL) of crypto mining equipment globally.
+                                <br/>
+                                Overall, my role as a whitepaper writer for WattyBit was to communicate the potential of the project to potential investors and stakeholders. By providing a detailed explanation of the technology, its benefits, and its potential impact on the crypto mining industry, I aimed to help potential investors make informed decisions and encourage them to become part of this exciting new project.</p>
                         </div>
                         <div class="col-md-5">
                             <div class="my__img animated animated_scroll fadeInUp" style="animation-delay: 0.3s">
