--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </button>
 
                             <!-- LOGO -->
-                            <a class="navbar-brand branding" href="#"><img src="assets/images/Frame.png"></img></a>
+                            <a class="navbar-brand branding" href="#"><img src="assets/images/BlessingAlabi.png"></img></a>
 
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -134,11 +134,11 @@
                                         <i class="fa fa-twitter fa-2x"></i>
                                     </a>
                                 </li>
-                                <!-- <li>
-                                    <a href="blessin">
-                                        <i class="fa-brands fa-google"></i>
+                                <li>
+                                    <a href="https://www.upwork.com/freelancers/~01a6734e39103bcb88">
+                                        <img style="width: 25px; vertical-align: middle;" src="/assets/images/pngaaa.com-5939936.png"/>
                                     </a>
-                                </li> -->
+                                </li>
                                 <li>
                                     <a href="https://www.linkedin.com/in/blessing-alabi-9090041b1/">
                                         <i class="fa-brands fa-linkedin-in"></i>
@@ -442,6 +442,9 @@
                     </a>
                     <a href="https://github.com/SeunScape">
                         <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://www.upwork.com/freelancers/~01a6734e39103bcb88">
+                        <img style="width: 25px; vertical-align: middle;" src="/assets/images/pngaaa.com-5939936.png"/>
                     </a>
                 </div>
                 <p>&copy; 2023 BlessingAlabi | All rights reserved.</p>
