--- a/whitepapers.html
+++ b/whitepapers.html
@@ -123,7 +123,7 @@
                             </button>
 
                             <!-- LOGO -->
-                            <a class="navbar-brand branding" href="#"><img src="assets/images/Frame.png"></img></a>
+                            <a class="navbar-brand branding" href="#"><img src="assets/images/BlessingAlabi.png"></img></a>
 
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -221,6 +221,9 @@
                     </a>
                     <a href="https://github.com/SeunScape">
                         <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://github.com/SeunScape">
+                        <img src="/assets/images/pngaaa.com-5939936.png"/>
                     </a>
                 </div>
                 <p>&copy; 2023 BlessingAlabi | All rights reserved.</p>
