--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                 <div class="row">
                                     <div class="col-md-7 padding-left-35 contain">
                                         <h6 style="color:#507ec8">Blockchain Development</h6>
-                                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Chrnonicles NFT</span></h3>
+                                        <h3 class="animated animated_scroll fadeInUp about-header" style="animation-delay: 0.3s; font-size: 35px;">Chronicles NFT</span></h3>
                                         <div class="skills">
                                             <ul class="dev-skill">
                                                 <li>Solidity</li>
